--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,5 @@
 @import 'fonts';
 @import 'global';
-@import 'colors';
 
 * {
   margin: 0;
@@ -18,6 +17,7 @@ html,
 body {
   font-size: calc(var(--index) * 5);
   font-family: 'ArtegraSans', Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
   color: #fff;
   background-color: $main;
   overflow: hidden;
@@ -32,6 +32,43 @@ a {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
 img {
   display:block;
+}
+
+html.lenis, html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
 }
