--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,6 @@
 @import 'fonts';
 @import 'global';
+@import 'keyFrames';
 
 * {
   margin: 0;
@@ -71,4 +72,17 @@ html.lenis, html.lenis body {
 
 .lenis.lenis-smooth iframe {
   pointer-events: none;
+}
+
+.page-enter-active,
+.page-leave-active {
+  transition: transform 1s;
+}
+
+.page-enter-from {
+  transform: translateY(100%);
+}
+
+.page-leave-to {
+  transform: translateY(-100%);
 }
