--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -10,4 +10,11 @@
 .title {
   font-size: 10rem;
   text-transform: uppercase;
+  .tablet & {
+    font-size: 5rem;
+  }
+  .mobile & {
+    font-size: 2.6rem;
+  }
 }
+
